# ApplicationSwitcher

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: configreader.hpp  hotkeys.hpp  json_ext.hpp  notificationicon.hpp  processes.hpp  stringext.hpp  switcher.hpp  windowing.hpp
src/: configreader.cpp  hotkeys.cpp  main.cpp  notificationicon.cpp  processes.cpp  processes.h  switcher.cpp  windowing.cpp
